libtracker-miner: Always query urn for add/update, metadata may already be in store

Part 1 of 2 for this bug:
https://bugzilla.gnome.org/show_bug.cgi?id=643388